# 2D-game-in-Cpp--raylib-

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  main.cpp  my_raylib_game
sources/: main.cpp  mystruct.h  player.cpp
